# cfupdater

./: Dockerfile  README.md  cfupdater.py  pyproject.toml
src/cfupdater/: cfdns.py  cfupdater.py
src/cfupdater_async/: cfupdater.py
