[project]
name = "cfupdater"
version = "0.1.0"
description = "Update CF DNS records"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.11.14",
    "asyncio>=4.0.0",
    "certifi>=2025.8.3",
    "onepassword-sdk>=0.2.1",
    "requests>=2.32.5",
]

[tool.setuptools]
package-dir = {"" = "src"}

[project.scripts]
cfupdater = "cfupdater.cfupdater:main"
